--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,20 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Web-app test\"",
+    "lint": "eslint src --fix"
   },
   "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@tailwindcss/typography": "^0.5.0",
+    "next": "latest",
+    "next-themes": "^0.0.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ui": "*"
   },
   "devDependencies": {
+    "@types/node": "17.0.4",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.0",
     "config": "*",
-    "eslint": "7.32.0",
-    "next-transpile-modules": "9.0.0",
+    "eslint": "^8.7.0",
+    "next-transpile-modules": "^9.0.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7",
     "tsconfig": "*",
-    "@types/react": "17.0.37",
-    "typescript": "^4.5.3"
+    "typescript": "4.5.4"
   }
 }
