--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,10 +5,22 @@
   "types": "./index.tsx",
   "license": "MIT",
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "tsconfig": "*",
+    "autoprefixer": "^10.4.2",
     "config": "*",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15",
+    "tsconfig": "*",
     "typescript": "^4.5.3"
+  },
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.0",
+    "classnames": "^2.3.1",
+    "framer-motion": "^6.2.3",
+    "next-themes": "^0.0.15",
+    "react-icons": "^4.3.1",
+    "react-switch": "^6.0.0"
   }
 }
