--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/react-library.json",
-  "include": ["."],
+  "extends": "tsconfig/nextjs.json",
+  "include": [".", "../../apps/web/src/pages/Layout.tsx"],
   "exclude": ["dist", "build", "node_modules"]
 }
