--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,10 +16,13 @@
     "typescript": "^4.5.3"
   },
   "dependencies": {
+    "@magic-ext/oauth": "^2.0.1",
     "@tailwindcss/typography": "^0.5.0",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.3",
+    "magic-sdk": "^8.0.1",
     "next-themes": "^0.0.15",
+    "npmlog": "^6.0.0",
     "react-icons": "^4.3.1",
     "react-switch": "^6.0.0"
   }
