--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/classnames": "^2.3.1",
+    "@types/luxon": "^2.0.9",
+    "@types/npmlog": "^4.1.4",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.2",
@@ -20,6 +22,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.3",
+    "luxon": "^2.3.0",
     "magic-sdk": "^8.0.1",
     "next-themes": "^0.0.15",
     "npmlog": "^6.0.0",
