Add recipe authless app. Make fixes.

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "tsconfig/api.json",
-  "include": [".", "../ui/magic.ts"],
+  "include": [
+    ".",
+    "../ui/magic.ts",
+    "../../apps/recipes-guest/src/lib/config.js"
+  ],
   "exclude": ["dist", "build", "node_modules"]
 }
