--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "@magic-sdk/admin": "^1.3.4",
     "luxon": "^2.3.0",
-    "npmlog": "^6.0.0"
+    "next-sanity": "^0.4.0"
   },
   "devDependencies": {
-    "@types/luxon": "^2.0.9",
-    "@types/npmlog": "^4.1.4"
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@types/luxon": "^2.0.9"
   }
 }
