--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,9 +5,9 @@
   "types": "./index.tsx",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@types/classnames": "^2.3.1",
     "@types/luxon": "^2.0.9",
-    "@types/npmlog": "^4.1.4",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.2",
@@ -24,8 +24,8 @@
     "framer-motion": "^6.2.3",
     "luxon": "^2.3.0",
     "magic-sdk": "^8.0.1",
+    "next-sanity": "^0.4.0",
     "next-themes": "^0.0.15",
-    "npmlog": "^6.0.0",
     "react-icons": "^4.3.1",
     "react-switch": "^6.0.0"
   }
