--- a/apps/recipes-guest/package.json
+++ b/apps/recipes-guest/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev --port 3001 | pino-pretty -c -f -a",
     "build": "next build",
-    "start": "next start",
+    "start": "next start | pino-pretty -c -f -a",
     "test": "echo \"Web-app test\"",
     "lint": "eslint src --fix"
   },
@@ -16,6 +16,8 @@
     "next": "latest",
     "next-sanity": "^0.4.0",
     "next-themes": "^0.0.15",
+    "pino": "^7.6.4",
+    "pino-pretty": "^7.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "ui": "*"
