--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@magic-sdk/admin": "^1.3.4",
     "luxon": "^2.3.0",
-    "next-sanity": "^0.4.0"
+    "next-sanity": "^0.4.0",
+    "pino": "^7.6.4",
+    "pino-pretty": "^7.5.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
