--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,20 @@
   "main": "./index.tsx",
   "types": "./index.tsx",
   "license": "MIT",
+  "dependencies": {
+    "@magic-ext/oauth": "^2.0.1",
+    "@tailwindcss/typography": "^0.5.0",
+    "classnames": "^2.3.1",
+    "framer-motion": "^6.2.3",
+    "luxon": "^2.3.0",
+    "magic-sdk": "^8.0.1",
+    "next-sanity": "^0.4.0",
+    "next-themes": "^0.0.15",
+    "pino": "^7.6.4",
+    "pino-pretty": "^7.5.1",
+    "react-icons": "^4.3.1",
+    "react-switch": "^6.0.0"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@types/classnames": "^2.3.1",
@@ -16,17 +30,5 @@
     "tailwindcss": "^3.0.15",
     "tsconfig": "*",
     "typescript": "^4.5.3"
-  },
-  "dependencies": {
-    "@magic-ext/oauth": "^2.0.1",
-    "@tailwindcss/typography": "^0.5.0",
-    "classnames": "^2.3.1",
-    "framer-motion": "^6.2.3",
-    "luxon": "^2.3.0",
-    "magic-sdk": "^8.0.1",
-    "next-sanity": "^0.4.0",
-    "next-themes": "^0.0.15",
-    "react-icons": "^4.3.1",
-    "react-switch": "^6.0.0"
   }
 }
