complete [slug] with components.

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "tsconfig/nextjs.json",
-  "include": [".", "../../apps/web/src/pages/Layout.tsx"],
+  "include": [
+    ".",
+    "../../apps/web/src/pages/Layout.tsx",
+    "../../apps/recipes-guest/src/components/SectionWithPortableTextBlock.tsx"
+  ],
   "exclude": ["dist", "build", "node_modules"]
 }
