--- a/apps/recipes-guest/package.json
+++ b/apps/recipes-guest/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/typography": "^0.5.0",
     "api": "*",
     "framer-motion": "^6.2.3",
+    "html-to-image": "^1.9.0",
+    "jspdf": "^2.5.1",
     "next": "latest",
     "next-sanity": "^0.4.0",
     "next-themes": "^0.0.15",
@@ -20,6 +22,8 @@
     "pino-pretty": "^7.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-youtube": "^7.14.0",
+    "tw-elements": "^1.0.0-alpha9",
     "ui": "*"
   },
   "devDependencies": {
