--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "@magic-ext/oauth": "^2.0.1",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.1",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.3",
     "luxon": "^2.3.0",
@@ -16,7 +16,9 @@
     "pino": "^7.6.4",
     "pino-pretty": "^7.5.1",
     "react-icons": "^4.3.1",
-    "react-switch": "^6.0.0"
+    "react-switch": "^6.0.0",
+    "react-youtube": "^7.14.0",
+    "tw-elements": "^1.0.0-alpha9"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
