--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,8 +17,7 @@
     "pino-pretty": "^7.5.1",
     "react-icons": "^4.3.1",
     "react-switch": "^6.0.0",
-    "react-youtube": "^7.14.0",
-    "tw-elements": "^1.0.0-alpha9"
+    "react-youtube": "^7.14.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
