--- a/apps/recipes-guest/package.json
+++ b/apps/recipes-guest/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.7.0",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.7",
     "tsconfig": "*",
     "typescript": "4.5.4"
