--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "sanity:start": "turbo run start --scope=*recipes-cms*"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
@@ -31,6 +32,9 @@
         "outputs": []
       },
       "dev": {
+        "cache": false
+      },
+      "start": {
         "cache": false
       }
     }
