--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.2",
     "config": "*",
     "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.15",
     "tsconfig": "*",
     "typescript": "^4.5.3"
