--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -3,19 +3,24 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001 | pino-pretty -c -f -a",
+    "dev": "next dev | pino-pretty -c -f -a",
     "build": "next build",
     "start": "next start | pino-pretty -c -f -a",
     "test": "echo \"Web-app test\"",
     "lint": "eslint src --fix"
   },
   "dependencies": {
+    "@magic-ext/oauth": "^2.0.1",
+    "@magic-sdk/admin": "^1.3.4",
     "@tailwindcss/typography": "^0.5.0",
     "api": "*",
+    "cookies": "^0.8.0",
     "framer-motion": "^6.2.3",
     "html-to-image": "^1.9.0",
     "jspdf": "^2.5.1",
+    "magic-sdk": "^8.0.1",
     "next": "latest",
+    "next-auth": "^4.1.2",
     "next-sanity": "^0.4.0",
     "next-themes": "^0.0.15",
     "pino": "^7.6.4",
