--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -14,6 +14,7 @@
     "@magic-sdk/admin": "^1.3.4",
     "@tailwindcss/typography": "^0.5.0",
     "api": "*",
+    "axios": "^0.25.0",
     "cookies": "^0.8.0",
     "framer-motion": "^6.2.3",
     "html-to-image": "^1.9.0",
