--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@magic-ext/oauth": "^2.0.1",
     "@magic-sdk/admin": "^1.3.4",
+    "@react-pdf/renderer": "^2.1.1",
     "@tailwindcss/typography": "^0.5.0",
     "api": "*",
     "axios": "^0.25.0",
     "cookies": "^0.8.0",
     "framer-motion": "^6.2.3",
-    "html-to-image": "^1.9.0",
-    "jspdf": "^2.5.1",
     "magic-sdk": "^8.0.1",
     "next": "latest",
     "next-auth": "^4.1.2",
