--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,7 @@
     "@magic-ext/oauth": "^2.0.1",
     "@tailwindcss/typography": "^0.5.1",
     "classnames": "^2.3.1",
+    "fractional": "^1.0.0",
     "framer-motion": "^6.2.3",
     "luxon": "^2.3.0",
     "magic-sdk": "^8.0.1",
