add "serves" to cms

--- a/apps/recipes-cms/package.json
+++ b/apps/recipes-cms/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "sanity start",
     "test": "sanity check",
-    "build": "sanity build public -y"
+    "build": "sanity build public -y",
+    "sanity:deploy": "sanity deploy"
   },
   "keywords": [
     "sanity"
