update sanity:deploy pipeline with cache false

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
       "start": {
         "cache": false
       },
-      "sanity:deploy": {}
+      "sanity:deploy": {
+        "cache": false
+      }
     }
   },
   "engines": {
