--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,10 +12,13 @@
     "framer-motion": "^6.2.3",
     "luxon": "^2.3.0",
     "magic-sdk": "^8.0.1",
+    "next": "latest",
     "next-sanity": "^0.4.0",
     "next-themes": "^0.0.15",
     "pino": "^7.6.4",
     "pino-pretty": "^7.5.1",
+    "react": "^17.0",
+    "react-dom": "^17.0",
     "react-icons": "^4.3.1",
     "react-switch": "^6.0.0",
     "react-youtube": "^7.14.0"
