use nextjs-progressbar and next-sanity-image

--- a/apps/recipes-guest/package.json
+++ b/apps/recipes-guest/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^6.2.3",
     "next": "latest",
     "next-sanity": "^0.4.0",
+    "next-sanity-image": "^3.2.1",
     "next-themes": "^0.0.15",
+    "nextjs-progressbar": "^0.0.13",
     "pino": "^7.6.4",
     "pino-pretty": "^7.5.1",
     "react": "^17.0.2",
