--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -22,7 +22,9 @@
     "next": "latest",
     "next-auth": "^4.1.2",
     "next-sanity": "^0.4.0",
+    "next-sanity-image": "^3.2.1",
     "next-themes": "^0.0.15",
+    "nextjs-progressbar": "^0.0.13",
     "pino": "^7.6.4",
     "pino-pretty": "^7.5.1",
     "react": "^17.0.2",
