--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "@magic-ext/oauth": "^2.0.1",
+    "@radix-ui/react-accordion": "^0.1.5",
+    "@stitches/react": "^1.2.6",
     "@tailwindcss/typography": "^0.5.1",
     "classnames": "^2.3.1",
     "fractional": "^1.0.0",
