--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@magic-ext/oauth": "^2.0.1",
     "@radix-ui/react-accordion": "^0.1.5",
+    "@radix-ui/react-label": "^0.1.4",
     "@stitches/react": "^1.2.6",
     "@tailwindcss/typography": "^0.5.1",
     "classnames": "^2.3.1",
