--- a/apps/recipes-web/tsconfig.json
+++ b/apps/recipes-web/tsconfig.json
@@ -2,11 +2,7 @@
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "noEmit": true,
-    "paths": {
-      "@components/*": ["src/components/*"],
-      "@styles/*": ["styles/*"]
-    }
+    "noEmit": true
   },
   "include": [
     "src/**/*",
