fully implement magic auth

--- a/apps/recipes-web/.env.sample.txt
+++ b/apps/recipes-web/.env.sample.txt
@@ -1,8 +1,5 @@
 NEXT_PUBLIC_SANITY_DATASET=production # change if using different dataset
-NEXT_PUBLIC_SANITY_PROJECT_ID=# place id from cms here
-SANITY_API_TOKEN=# use if datset is private get from sanity manager
+NEXT_PUBLIC_SANITY_PROJECT_ID=upeud0fr # place id from cms here
+# SANITY_API_TOKEN=# use if datset is private get from sanity manager
 NEXT_PUBLIC_MAGIC_PUBLISHABLE_KEY=pk_live_**** # get from dashboard.magic.link
 MAGIC_SECRET_KEY=sk_live_**** # get from dashboard.magic.link
-JWT_KEY=# generate 32 character string
-NEXTAUTH_SECRET=# generate private key from SSH keygen tool
-NEXTAUTH_URL="http://localhost:3000" # change port if changing port in package.json
