--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@magic-ext/oauth": "^2.0.1",
     "@magic-sdk/admin": "^1.3.4",
+    "@radix-ui/react-dialog": "^0.1.6",
     "@react-pdf/renderer": "^2.1.1",
     "@tailwindcss/typography": "^0.5.0",
     "api": "*",
     "cookies": "^0.8.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.3",
     "magic-sdk": "^8.0.1",
     "next": "latest",
@@ -30,7 +32,8 @@
     "react-speech-recognition": "^3.9.0",
     "react-youtube": "^7.14.0",
     "regenerator-runtime": "^0.13.9",
-    "ui": "*"
+    "ui": "*",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
