--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -32,11 +32,13 @@
     "react-speech-recognition": "^3.9.0",
     "react-youtube": "^7.14.0",
     "regenerator-runtime": "^0.13.9",
+    "swr": "^1.2.2",
     "ui": "*",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@types/cookies": "^0.7.7",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "@types/react-speech-recognition": "^3.9.0",
