--- a/apps/recipes-guest/package.json
+++ b/apps/recipes-guest/package.json
@@ -14,7 +14,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "api": "*",
     "framer-motion": "^6.2.3",
-    "next": "latest",
+    "next": "^12.2.1",
     "next-sanity": "^0.4.0",
     "next-sanity-image": "^3.2.1",
     "next-themes": "^0.0.15",
