--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -20,7 +20,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.2.3",
     "magic-sdk": "^8.0.1",
-    "next": "latest",
+    "next": "^12.2.1",
     "next-sanity": "^0.4.0",
     "next-sanity-image": "^3.2.1",
     "next-themes": "^0.0.15",
