--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.0",
-    "next": "latest",
+    "next": "^12.2.1",
     "next-themes": "^0.0.15",
     "pino": "^7.6.4",
     "pino-pretty": "^7.5.1",
