--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^6.2.3",
     "luxon": "^2.3.0",
     "magic-sdk": "^8.0.1",
-    "next": "latest",
+    "next": "^12.2.1",
     "next-sanity": "^0.4.0",
     "next-themes": "^0.0.15",
     "pino": "^7.6.4",
