--- a/apps/recipes-web/package.json
+++ b/apps/recipes-web/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-speech-recognition": "^3.9.0",
+    "react-toastify": "^9.0.8",
     "react-youtube": "^7.14.0",
     "regenerator-runtime": "^0.13.9",
     "ui": "*",
